--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,47 @@ a:hover {
 	color:#63a4ff;
 }
 
+/*//////////back panel//////////////*/
+.panel {
+	padding-left: 2%;
+	padding-top: 2%;
+	padding-right: 2%;
+    position: fixed;
+    left: -15.625em;
+    width: 15.625em; 
+	background: #292929;
+	z-index: 999999;
+	color: #4d82cb;
+	list-style: none;
+}
+
+.panel ul {
+	list-style: none;
+}
+
+.nav-block {
+	display: none;
+}
+
+.nav-block a{
+	color: white;
+}
+
+.panel a{
+    color: #ddd;
+}
+
+.panel a:hover{
+    color: #63a4ff;
+}
+
+.panel span{
+    color: #8c8c8c;
+	font-size: 10pt;
+}
+
+/*//////////back panel//////////////*/
+
 .btn-primary {
 	color:white;
 	background: #4d82cb;
@@ -52,11 +93,11 @@ a:hover {
 }
 
 .active_block:hover .in_block{
-	  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
+	-webkit-transition: all 1s ease;
+  	-moz-transition: all 1s ease;
+  	-o-transition: all 1s ease;
+  	-ms-transition: all 1s ease;
+ 	transition: all 1s ease;
 	top:33px;
     display:block;
     position:absolute;
@@ -94,12 +135,6 @@ a:hover {
 	min-height: 100%;
 	margin-bottom: -230px
 }
-
-/*
-* html .wrapper{
-	height: 100%;
-}
-*/
 
 .push{
 	height: 230px;
@@ -168,25 +203,25 @@ ul.list-inline-left li {
 }
 
 ul.list-inline-left li:hover{
-  background: #63a4ff;
-  text-decoration: none;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
+  	background: #63a4ff;
+  	text-decoration: none;
+  	-webkit-transition: all 1s ease;
+  	-moz-transition: all 1s ease;
+  	-o-transition: all 1s ease;
+  	-ms-transition: all 1s ease;
+  	transition: all 1s ease;
 }
 
 ul.list-inline-basket li {
-  list-style: none;
-  margin: 0 5px;
-  float: right;
+  	list-style: none;
+  	margin: 0 5px;
+  	float: right;
 }
 
 ul.list-inline-right li {
 	padding-top: 0.4%;
-  list-style: none;
-  float: right;
+  	list-style: none;
+  	float: right;
 	height: 30px;
 	padding-left: 2%;
 	padding-right: 2%;
@@ -194,22 +229,22 @@ ul.list-inline-right li {
 
 
 ul.list-inline-right li:hover {
-  background: #63a4ff;
-  color: black;
-  text-decoration: none;
+  	background: #63a4ff;
+  	color: black;
+  	text-decoration: none;
 	border-bottom: 2px solid #4d82cb;
 	color: white;
-	  -webkit-transition: all 1s ease;
-     -moz-transition: all 1s ease;
-       -o-transition: all 1s ease;
-      -ms-transition: all 1s ease;
-          transition: all 1s ease;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
 }
 
 ul.list-inline-lang li {
 	padding-top: 0.4%;
-  list-style: none;
-  float: left;
+  	list-style: none;
+  	float: left;
 	height: 30px;
 	padding-left: 2%;
 	padding-right: 2%;
@@ -217,16 +252,16 @@ ul.list-inline-lang li {
 
 
 ul.list-inline-lang li:hover {
-  background: #63a4ff;
-  color: black;
-  text-decoration: none;
+  	background: #63a4ff;
+  	color: black;
+  	text-decoration: none;
 	border-bottom: 2px solid #4d82cb;
 	color: white;
-	  -webkit-transition: all 1s ease;
-     -moz-transition: all 1s ease;
-       -o-transition: all 1s ease;
-      -ms-transition: all 1s ease;
-          transition: all 1s ease;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
 }
 
 ul.list-block {
@@ -275,7 +310,9 @@ ul.list-ul li{
 	margin-left: 2%;
 	padding-left: 1%;
 }
+
 /*/////////////////////////main/////////////////////////////////*/
+
 .main {
 	margin-top: 3%;
 	
@@ -341,11 +378,11 @@ ul.list-ul li{
 
 
 .nav-tabs .nav-link.active {
-		  -webkit-transition: all 1s ease;
-     -moz-transition: all 1s ease;
-       -o-transition: all 1s ease;
-      -ms-transition: all 1s ease;
-          transition: all 1s ease;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
     color: #fff;
     background-color: #63a4ff;
     border-color: #fff;
@@ -359,7 +396,7 @@ ul.list-ul li{
 
 .tab-content {
 	padding: 5%;
-    background: ghostwhite
+    background: ghostwhite;
 }
 
 /*/////////////////////////footer/////////////////////////////////*/
@@ -402,8 +439,13 @@ ul.list-ul li{
 	text-align: center;
 }
 
+@media (min-width: 992px) {
+	#menu {
+			display: none;
+	}
+}
+
 @media (max-width: 992px) {
-	
 	
 	.header .header_main {
    		margin-top: 5%;
@@ -424,6 +466,10 @@ ul.list-ul li{
 
 	.basket {
 		display: none;
+	}
+	
+	.nav-block {
+		display: block;
 	}
 	
 	
