--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,11 @@ a:hover {
 	color:#63a4ff;
 }
 
-/*//////////back panel//////////////*/
+/*//////////mobile bar//////////////*/
 .panel {
-	padding-left: 2%;
-	padding-top: 2%;
-	padding-right: 2%;
+	padding-left: 7%;
+	padding-top: 5%;
+	padding-right: 5%;
     position: fixed;
     left: -15.625em;
     width: 15.625em; 
@@ -40,6 +40,10 @@ a:hover {
 
 .panel ul {
 	list-style: none;
+}
+
+.panel ul li{
+	padding-bottom: 10%;
 }
 
 .nav-block {
@@ -63,7 +67,7 @@ a:hover {
 	font-size: 10pt;
 }
 
-/*//////////back panel//////////////*/
+/*//////////mobile bar end//////////////*/
 
 .btn-primary {
 	color:white;
@@ -110,26 +114,14 @@ a:hover {
 	list-style: circle;
 }
 
+/*
 .container-fluid{
 	margin: 0 auto;
 	box-shadow: 0 0 0,1px 1px 1px #d5d5d5,-1px 1px 1px #d5d5d5;
 	-moz-box-shadow: 0 0 0  ,1px 1px 1px #d5d5d5,-1px 1px 1px #d5d5d5;
 	-webkit-box-shadow: 0 0 0  ,1px 1px 1px #d5d5d5,-1px 1px 1px #d5d5d5;
 }
-
-.opacity img {
-/*
- 	-webkit-transition: all 1s ease;
-  	-moz-transition: all 1s ease;
-  	-o-transition: all 1s ease;
-  	-ms-transition: all 1s ease;
-  	transition: all 1s ease;
 */
-}
-
-.opacity img:hover{
-  -webkit-filter: opacity(10%); 	
-}
 
 .wrapper {
 	min-height: 100%;
@@ -250,7 +242,6 @@ ul.list-inline-lang li {
 	padding-right: 2%;
 }
 
-
 ul.list-inline-lang li:hover {
   	background: #63a4ff;
   	color: black;
@@ -315,13 +306,11 @@ ul.list-ul li{
 
 .main {
 	margin-top: 3%;
-	
 	margin-bottom: 3%;
 }
 
 .main .main_menu {
 	margin-bottom: 10%;
-	
 }
 
 .main .sidebar {
@@ -341,7 +330,6 @@ ul.list-ul li{
 }
 
 .main .img_det {
-/*   	width: 170px;*/
     padding-bottom: 4%;
 	padding-right: 3%;
 }
@@ -375,7 +363,6 @@ ul.list-ul li{
 .nav-tabs a:hover{
 	color: #63a4ff;
 }
-
 
 .nav-tabs .nav-link.active {
 	-webkit-transition: all 1s ease;
@@ -439,6 +426,8 @@ ul.list-ul li{
 	text-align: center;
 }
 
+/*///////////////media//////////////*/
+
 @media (min-width: 992px) {
 	#menu {
 			display: none;
@@ -470,6 +459,14 @@ ul.list-ul li{
 	
 	.nav-block {
 		display: block;
+	}
+	
+	.contacts span {
+		display: none;
+	}
+	
+	.authorization span {
+		display: none;
 	}
 	
 	
